--- a/docs/content/developer/advanced/custom-indexer.mdx
+++ b/docs/content/developer/advanced/custom-indexer.mdx
@@ -3,11 +3,11 @@ title: Custom Indexer
 description: You can build custom indexers using the IOTA micro-data ingestion framework. To create an indexer, you subscribe to a checkpoint stream with full checkpoint content. Establishing a custom indexer helps improve latency, allows pruning the data of your IOTA Full node, and provides efficient assemblage of checkpoint data.
 ---
 
-You can build custom indexers using the IOTA micro-data ingestion framework. To create an indexer, you subscribe to a checkpoint stream with full checkpoint content. This stream can be one of the publicly available streams from Mysten Labs, one that you set up in your local environment, or a combination of the two.
+You can build custom indexers using the IOTA micro-data ingestion framework. To create an indexer, you subscribe to a checkpoint stream with full checkpoint content. This stream can be one of the publicly available streams from IOTA, one that you set up in your local environment, or a combination of the two.
 
 Establishing a custom indexer helps improve latency, allows pruning the data of your IOTA Full node, and provides efficient assemblage of checkpoint data.
 
-## Interface and data format
+## Interface and Data Format
 
 To use the framework, implement a basic interface:
 
@@ -18,15 +18,15 @@ trait Worker: Send + Sync {
 }
 ```
 
-In this example, the `CheckpointData` struct represents full checkpoint content. The struct contains checkpoint summary and contents, as well as detailed information about each individual transaction. The individual transaction data includes events and input/output objects. The full definition for this content is in the [full_checkpoint_content.rs](https://github.com/MystenLabs/iota/blob/releases/iota-graphql-rpc-v2024.1.0-release/crates/iota-types/src/full_checkpoint_content.rs) file of the `iota-types` crate.
+In this example, the `CheckpointData` struct represents full checkpoint content. The struct contains checkpoint summary and contents, as well as detailed information about each individual transaction. The individual transaction data includes events and input/output objects. The full definition for this content is in the [full_checkpoint_content.rs](https://github.com/iotaledger/iota/blob/releases/iota-graphql-rpc-v2024.1.0-release/crates/iota-types/src/full_checkpoint_content.rs) file of the `iota-types` crate.
 
-## Checkpoint stream sources
+## Checkpoint Stream Sources
 
 Data ingestion for your indexer supports several checkpoint stream sources.
 
-### Remote reader
+### Remote Reader
 
-The most straightforward stream source is to subscribe to a remote store of checkpoint contents. Mysten Labs provides the following buckets:
+The most straightforward stream source is to subscribe to a remote store of checkpoint contents. IOTA provides the following buckets:
 
 - Testnet: `https://checkpoints.testnet.iota.io`
 - Mainnet: `https://checkpoints.mainnet.iota.io`
@@ -56,7 +56,7 @@ The IOTA data ingestion framework provides a helper function to quickly bootstra
 
 This is suitable for setups with a single ingestion pipeline where progress tracking is managed outside of the framework.
 
-### Local reader
+### Local Reader
 
 Colocate the data ingestion daemon with a Full node and enable checkpoint dumping on the latter to set up a local stream source. After enabling, the Full node starts dumping executed checkpoints as files to a local directory, and the data ingestion daemon subscribes to changes in the directory through an inotify-like mechanism. This approach allows minimizing ingestion latency (checkpoint are processed immediately after a checkpoint executor on a Full node) and getting rid of dependency on an externally managed bucket.
 
@@ -101,7 +101,7 @@ The data ingestion executor can run multiple workflows simultaneously. For each 
 
 The concurrency parameter specifies how many threads the workflow uses. Having a concurrency value greater than 1 is helpful when tasks are idempotent and can be processed in parallel and out of order. The executor only updates the progress/watermark to a certain checkpoint when all preceding checkpoints are processed.
 
-### Hybrid mode
+### Hybrid Mode
 
 Specify both a local and remote store as a fallback to ensure constant data flow. The framework always prioritizes locally available checkpoint data over remote data. It's useful when you want to start utilizing your own Full node for data ingestion but need to partially backfill historical data or just have a failover.
 ```rust
@@ -122,7 +122,7 @@ Code for the cargo.toml manifest file for the custom indexer.
 ```.toml file=<rootDir>/examples/custom-indexer/rust/Cargo.toml
 ```
 
-## Source code for an implementation
+## Source Code 
 
-Find the following source code in the [IOTA repo](https://github.com/mystenlabs/iota/tree/main/examples/custom-indexer/rust).
+Find the following source code in the [IOTA repo](https://github.com/iotaledger/iota/tree/main/examples/custom-indexer/rust).
 
