--- a/docs/content/developer/iota-101/access-time.mdx
+++ b/docs/content/developer/iota-101/access-time.mdx
@@ -5,7 +5,7 @@ description: Access network-based time for your transactions. IOTA provides a Cl
 
 You have options when needing to access network-based time for your transactions. If you need a near real-time measurement (within a few seconds), use the immutable reference of time provided by the `Clock` module in Move. The reference value from this module updates with every network checkpoint. If you don't need as current a time slice, use the `epoch_timestamp_ms` function to capture the precise moment the current epoch started.
 
-## The iota::clock::Clock module
+## The iota::clock::Clock Module
 
 To access a prompt timestamp, you must pass a read-only reference of `iota::clock::Clock` as an entry function parameter in your transactions. An instance of `Clock` is provided at address `0x6`, no new instances can be created.
 
@@ -45,7 +45,7 @@ The next example presents a basic test that creates a Clock, increments it, and 
 ```move file=<rootDir>/crates/iota-framework/packages/iota-framework/tests/clock_tests.move#L6-L22
 ```
 
-## Epoch timestamps
+## Epoch Timestamps
 
 Use the following function from the `iota::tx_context` module to access the timestamp for the start of the current epoch for all transactions (including ones that do not go through consensus):
 
