Apply suggestions from code review
Co-authored-by: Dr-Electron <dr-electr0n@protonmail.com>

--- a/docs/content/developer/getting-started/install-iota.mdx
+++ b/docs/content/developer/getting-started/install-iota.mdx
@@ -29,7 +29,7 @@ IOTA supports the following operating systems:
 
 - Linux - Ubuntu version 20.04 (Bionic Beaver) or later
 - macOS - macOS Monterey or later
-- Microsoft Windows - Windows 10 and 11
+- Microsoft Windows - Windows 10 or later
 
 {/* TODO: Re-enable and check if we have packages published */}
 {/*
