Revert "fix(devx): fix links"
This reverts commit 7a54d34bf11037fed0078712a04b2e6af06dc802.

--- a/docs/content/developer/standards/closed-loop-token.mdx
+++ b/docs/content/developer/standards/closed-loop-token.mdx
@@ -2,7 +2,7 @@
 title: Closed-Loop Token
 ---
 
-Using the Closed-Loop Token standard, you can limit the applications that can use the token and set up custom policies for transfers, spends, and conversions. The [`iota::token` module](../../references/framework/iota-framework/token) in the IOTA framework defines the standard.
+Using the Closed-Loop Token standard, you can limit the applications that can use the token and set up custom policies for transfers, spends, and conversions. The [`iota::token` module](../../references/framework/iota-framework/token.mdx) in the IOTA framework defines the standard.
 
 ## Background and Use Cases
 
