--- a/docs/content/developer/iota-101/objects/object-ownership/shared.mdx
+++ b/docs/content/developer/iota-101/objects/object-ownership/shared.mdx
@@ -4,7 +4,7 @@ description: Anyone can access shared objects on the IOTA network, so care must 
 ---
 
 A shared object is an object that is made accessible to everyone on the IOTA network using the 
-[`iota::transfer::share_object`](../../../../references/framework/iota-framework/transfer#function-share_object) function.
+[`iota::transfer::share_object`](../../../../references/framework/iota-framework/transfer.mdx#function-share_object) function.
 Unlike owned objects, which are restricted to a specific address, shared objects can be accessed by anyone.
 This extended accessibility can be advantageous for certain applications,
 but it also requires careful consideration of security, especially when sensitive operations are involved.
